--- a/计算机科学/找工作/算法题/【排序】.md
+++ b/计算机科学/找工作/算法题/【排序】.md
@@ -195,3 +195,690 @@ public class Test {
 }
 ```
 
+
+
+---
+
+### labuladong-快排
+
+前文 [归并排序算法详解](https://mp.weixin.qq.com/s?__biz=MzAxODQxMDM0Mw==&mid=2247495989&idx=1&sn=30e34ac75dd1c724205e9c8b0f488e35&scene=21#wechat_redirect) 通过二叉树的视角描述了归并排序的算法原理以及应用，很多读者大呼精妙，那我就趁热打铁，**今天继续用二叉树的视角讲一讲快速排序算法的原理以及运用**。
+
+### 快速排序算法思路
+
+首先我们看一下快速排序的代码框架：
+
+```
+void sort(int[] nums, int lo, int hi) {
+    if (lo >= hi) {
+        return;
+    }
+    // 对 nums[lo..hi] 进行切分
+    // 使得 nums[lo..p-1] <= nums[p] < nums[p+1..hi]
+    int p = partition(nums, lo, hi);
+    // 去左右子数组进行切分
+    sort(nums, lo, p - 1);
+    sort(nums, p + 1, hi);
+}
+```
+
+其实你对比之后可以发现，快速排序就是一个二叉树的前序遍历：
+
+```
+/* 二叉树遍历框架 */
+void traverse(TreeNode root) {
+    if (root == null) {
+        return;
+    }
+    /****** 前序位置 ******/
+    print(root.val);
+    /*********************/
+    traverse(root.left);
+    traverse(root.right);
+}
+```
+
+另外，前文 [归并排序详解](https://mp.weixin.qq.com/s?__biz=MzAxODQxMDM0Mw==&mid=2247495989&idx=1&sn=30e34ac75dd1c724205e9c8b0f488e35&scene=21#wechat_redirect) 用一句话总结了归并排序：先把左半边数组排好序，再把右半边数组排好序，然后把两半数组合并。
+
+同时我提了一个问题，让你一句话总结快速排序，这里说一下我的答案：
+
+**快速排序是先将一个元素排好序，然后再将剩下的元素排好序**。
+
+为什么这么说呢，且听我慢慢道来。
+
+快速排序的核心无疑是 `partition` 函数， `partition` 函数的作用是在 `nums[lo..hi]` 中寻找一个分界点 `p`，通过交换元素使得 `nums[lo..p-1]` 都小于等于 `nums[p]`，且 `nums[p+1..hi]` 都大于 `nums[p]`：
+
+![Image](https://tva1.sinaimg.cn/large/e6c9d24egy1h68q7twx3lj20u00gwmxu.jpg)
+
+一个元素左边的元素都比它小，右边的元素都比它大，啥意思？不就是它自己已经被放到正确的位置上了吗？
+
+所以 `partition` 函数干的事情，其实就是把 `nums[p]` 这个元素排好序了。
+
+一个元素被排好序了，然后呢？你再把剩下的元素排好序不就得了。
+
+剩下的元素有哪些？左边一坨，右边一坨，去吧，对子数组进行递归，用 `partition` 函数把剩下的元素也排好序。
+
+**从二叉树的视角，我们可以把子数组 `nums[lo..hi]` 理解成二叉树节点上的值，`srot` 函数理解成二叉树的遍历函数**。
+
+参照二叉树的前序遍历顺序，快速排序的运行过程如下 GIF：
+
+![Image](https://tva1.sinaimg.cn/large/e6c9d24egy1h68q7wupptg20tz0gvn8j.gif)
+
+你注意最后形成的这棵二叉树是什么？是一棵二叉搜索树：
+
+![Image](https://tva1.sinaimg.cn/large/e6c9d24egy1h68q7ur2saj20u00gwaau.jpg)
+
+这应该不难理解吧，因为 `partition` 函数每次都将数组切分成左小右大两部分，恰好和二叉搜索树左小右大的特性吻合。
+
+**你甚至可以这样理解：快速排序的过程是一个构造二叉搜索树的过程**。
+
+但谈到二叉搜索树的构造，那就不得不说二叉搜索树不平衡的极端情况，极端情况下二叉搜索树会退化成一个链表，导致操作效率大幅降低。
+
+快速排序的过程中也有类似的情况，比如我画的图中每次 `partition` 函数选出的分界点都能把 `nums[lo..hi]` 平分成两半，但现实中你不见得运气这么好。
+
+如果你每次运气都特别背，有一边的元素特别少的话，这样会导致二叉树生长不平衡：
+
+![Image](https://tva1.sinaimg.cn/large/e6c9d24egy1h68q7xgdvfj20u00gwwez.jpg)
+
+这样的话，时间复杂度会大幅上升，后面分析时间复杂度的时候再细说。
+
+**我们为了避免出现这种极端情况，需要引入随机性**。
+
+常见的方式是在进行排序之前对整个数组执行 [洗牌算法](https://mp.weixin.qq.com/s?__biz=MzAxODQxMDM0Mw==&mid=2247484503&idx=1&sn=e30ef74eb16ad385c16681cd6dfe15cf&scene=21#wechat_redirect) 进行打乱，或者在 `partition`函数中随机选择数组元素作为分界点，本文会使用前者。
+
+### 快速排序代码实现
+
+明白了上述概念，直接看快速排序的代码实现：
+
+```
+class Quick {
+
+    public static void sort(int[] nums) {
+        // 为了避免出现耗时的极端情况，先随机打乱
+        shuffle(nums);
+        // 排序整个数组（原地修改）
+        sort(nums, 0, nums.length - 1);
+    }
+
+    private static void sort(int[] nums, int lo, int hi) {
+        if (lo >= hi) {
+            return;
+        }
+        // 对 nums[lo..hi] 进行切分
+        // 使得 nums[lo..p-1] <= nums[p] < nums[p+1..hi]
+        int p = partition(nums, lo, hi);
+
+        sort(nums, lo, p - 1);
+        sort(nums, p + 1, hi);
+    }
+
+    // 对 nums[lo..hi] 进行切分
+    private static int partition(int[] nums, int lo, int hi) {
+        int pivot = nums[lo];
+        // 关于区间的边界控制需格外小心，稍有不慎就会出错
+        // 我这里把 i, j 定义为开区间，同时定义：
+        // [lo, i) <= pivot；(j, hi] > pivot
+        // 之后都要正确维护这个边界区间的定义
+        int i = lo + 1, j = hi;
+        // 当 i > j 时结束循环，以保证区间 [lo, hi] 都被覆盖
+        while (i <= j) {
+            while (i < hi && nums[i] <= pivot) {
+                i++;
+                // 此 while 结束时恰好 nums[i] > pivot
+            }
+            while (j > lo && nums[j] > pivot) {
+                j--;
+                // 此 while 结束时恰好 nums[j] <= pivot
+            }
+            // 此时 [lo, i) <= pivot && (j, hi] > pivot
+
+            if (i >= j) {
+                break;
+            }
+            swap(nums, i, j);
+        }
+        // 将 pivot 放到合适的位置，即 pivot 左边元素较小，右边元素较大
+        swap(nums, lo, j);
+        return j;
+    }
+
+    // 洗牌算法，将输入的数组随机打乱
+    private static void shuffle(int[] nums) {
+        Random rand = new Random();
+        int n = nums.length;
+        for (int i = 0 ; i < n; i++) {
+            // 生成 [i, n - 1] 的随机数
+            int r = i + rand.nextInt(n - i);
+            swap(nums, i, r);
+        }
+    }
+
+    // 原地交换数组中的两个元素
+    private static void swap(int[] nums, int i, int j) {
+        int temp = nums[i];
+        nums[i] = nums[j];
+        nums[j] = temp;
+    }
+}
+```
+
+这里啰嗦一下核心函数 `partition` 的实现，正如前文 [二分搜索框架详解](https://mp.weixin.qq.com/s?__biz=MzAxODQxMDM0Mw==&mid=2247485044&idx=1&sn=e6b95782141c17abe206bfe2323a4226&scene=21#wechat_redirect) 所说，想要正确寻找切分点非常考验你对边界条件的控制，稍有差错就会产生错误的结果。
+
+**处理边界细节的一个技巧就是，你要明确每个变量的定义以及区间的开闭情况**。具体的细节看代码注释，建议自己动手实践。
+
+接下来分析一下快速排序的时间复杂度。
+
+显然，快速排序的时间复杂度主要消耗在 `partition` 函数上，因为这个函数中存在循环。
+
+所以 `partition` 函数到底执行了多少次？每次执行的时间复杂度是多少？总的时间复杂度是多少？
+
+和归并排序类似，需要结合之前画的这幅图来从整体上分析：
+
+![Image](https://tva1.sinaimg.cn/large/e6c9d24egy1h68q7y1f4rj20u00gwt9d.jpg)
+
+**`partition` 执行的次数是二叉树节点的个数，每次执行的复杂度就是每个节点代表的子数组 `nums[lo..hi]` 的长度，所以总的时间复杂度就是整棵树中「数组元素」的个数**。
+
+假设数组元素个数为 `N`，那么二叉树每一层的元素个数之和就是 `O(N)`；分界点分布均匀的理想情况下，树的层数为 `O(logN)`，所以理想的总时间复杂度为 `O(NlogN)`。
+
+由于快速排序没有使用任何辅助数组，所以空间复杂度就是递归堆栈的深度，也就是树高 `O(logN)`。
+
+当然，我们之前说过快速排序的效率存在一定随机性，如果每次 `partition` 切分的结果都极不均匀：
+
+![Image](https://tva1.sinaimg.cn/large/e6c9d24egy1h68q7xgdvfj20u00gwwez.jpg)
+
+快速排序就退化成选择排序了，树高为 `O(N)`，每层节点的元素个数从 `N` 开始递减，总的时间复杂度为：
+
+```
+N + (N - 1) + (N - 2) + ... + 1 = O(N^2)
+```
+
+所以我们说，快速排序理想情况的时间复杂度是 `O(NlogN)`，空间复杂度 `O(logN)`，极端情况下的最坏时间复杂度是 `O(N^2)`，空间复杂度是 `O(N)`。
+
+不过大家放心，经过随机化的 `partition` 函数很难出现极端情况，所以快速排序的效率还是非常高的。
+
+**还有一点需要注意的是，快速排序是「不稳定排序」，与之相对的，前文讲的 [归并排序](https://mp.weixin.qq.com/s?__biz=MzAxODQxMDM0Mw==&mid=2247495989&idx=1&sn=30e34ac75dd1c724205e9c8b0f488e35&scene=21#wechat_redirect) 是「稳定排序」**。
+
+对于序列中的相同元素，如果排序之后它们的相对位置没有发生改变，则称该排序算法为「稳定排序」，反之则为「不稳定排序」。
+
+如果单单排序 int 数组，那么稳定性没有什么意义。但如果排序一些结构比较复杂的数据，那么稳定性排序就有更大的优势了。
+
+比如说你有若干订单数据，已经按照订单号排好序了，现在你想对订单的交易日期再进行排序：
+
+如果用稳定排序算法（比如归并排序），那么这些订单不仅按照交易日期排好了序，而且相同交易日期的订单的订单号依然是有序的。
+
+但如果你用不稳定排序算法（比如快速排序），那么虽然排序结果会按照交易日期排好序，但相同交易日期的订单的订单号会丧失有序性。
+
+**在实际工程中我们经常会将一个复杂对象的某一个字段作为排序的 `key`，所以应该关注编程语言提供的 API 底层使用的到底是什么排序算法，是稳定的还是不稳定的，这很可能影响到代码执行的效率甚至正确性**。
+
+说了这么多，快速排序算法应该算是讲明白了，力扣第 912 题「排序数组」就是让你对数组进行排序，我们可以直接套用快速排序的代码模板：
+
+```
+class Solution {
+    public int[] sortArray(int[] nums) {
+        // 归并排序对数组进行原地排序
+        Quick.sort(nums);
+        return nums;
+    }
+}
+
+class Quick {
+    // 见上文
+}
+```
+
+### 快速选择算法
+
+不仅快速排序算法本身很有意思，而且它还有一些有趣的变体，最有名的就是快速选择算法（Quick Select）。
+
+力扣第 215 题「数组中的第 K 个最大元素」就是一道类似的题目，函数签名如下：
+
+```
+int findKthLargest(int[] nums, int k);
+```
+
+题目要求我们寻找**第 `k` 个最大的元素**，稍微有点绕，意思是去寻找 `nums` 数组降序排列后排名第 `k` 的那个元素。
+
+比如输入 `nums = [2,1,5,4], k = 2`，算法应该返回 4，因为 4 是 `nums` 中第 2 个**最大**的元素。
+
+这种问题有两种解法，一种是二叉堆（优先队列）的解法，另一种就是快速选择算法，我们分别来看。
+
+**二叉堆的解法比较简单，但时间复杂度稍高**，直接看代码好了：
+
+```
+int findKthLargest(int[] nums, int k) {
+    // 小顶堆，堆顶是最小元素
+    PriorityQueue<Integer> 
+        pq = new PriorityQueue<>();
+    for (int e : nums) {
+        // 每个元素都要过一遍二叉堆
+        pq.offer(e);
+        // 堆中元素多于 k 个时，删除堆顶元素
+        if (pq.size() > k) {
+            pq.poll();
+        }
+    }
+    // pq 中剩下的是 nums 中 k 个最大元素，
+    // 堆顶是最小的那个，即第 k 个最大元素
+    return pq.peek();
+}
+```
+
+二叉堆（优先队列）是一种能够自动排序的数据结构，我们前文 [手把手实现二叉堆数据结构](https://mp.weixin.qq.com/s?__biz=MzAxODQxMDM0Mw==&mid=2247484495&idx=1&sn=bbfeba9bb5cfd50598e2a4d08c839ee9&scene=21#wechat_redirect) 实现过这种结构，我就默认大家熟悉它的特性了。
+
+核心思路就是把小顶堆 `pq` 理解成一个筛子，较大的元素会沉淀下去，较小的元素会浮上来；当堆大小超过 `k` 的时候，我们就删掉堆顶的元素，因为这些元素比较小，而我们想要的是前 `k` 个最大元素嘛。
+
+当 `nums` 中的所有元素都过了一遍之后，筛子里面留下的就是最大的 `k` 个元素，而堆顶元素是堆中最小的元素，也就是「第 `k` 个最大的元素」。
+
+思路很简单吧，唯一注意的是，Java 的 `PriorityQueue` 默认实现是小顶堆，有的语言的优先队列可能默认是大顶堆，可能需要做一些调整。
+
+二叉堆插入和删除的时间复杂度和堆中的元素个数有关，在这里我们堆的大小不会超过 `k`，所以插入和删除元素的复杂度是 `O(logk)`，再套一层 for 循环，假设数组元素总数为 `N`，总的时间复杂度就是 `O(Nlogk)`。
+
+这个解法的空间复杂度很显然就是二叉堆的大小，为 `O(k)`。
+
+**快速选择算法是快速排序的变体，效率更高**，面试中如果能够写出快速选择算法，肯定是加分项。
+
+首先，题目问「第 `k` 个最大的元素」，相当于数组升序排序后「排名第 `n - k`的元素」，为了方便表述，后文另 `k' = n - k`。
+
+如何知道「排名第 `k'` 的元素」呢？其实在快速排序算法 `partition` 函数执行的过程中就可以略见一二。
+
+我们刚说了，`partition` 函数会将 `nums[p]` 排到正确的位置，使得 `nums[lo..p-1] < nums[p] < nums[p+1..hi]`：
+
+这时候，虽然还没有把整个数组排好序，但我们已经让 `nums[p]` 左边的元素都比 `nums[p]` 小了，也就知道 `nums[p]` 的排名了。
+
+**那么我们可以把 `p` 和 `k'` 进行比较，如果 `p < k'` 说明第 `k'` 大的元素在 `nums[p+1..hi]` 中，如果 `p > k'` 说明第 `k'` 大的元素在 `nums[lo..p-1]` 中**。
+
+进一步，去 `nums[p+1..hi]` 或者 `nums[lo..p-1]` 这两个子数组中执行 `partition` 函数，就可以进一步缩小排在第 `k'` 的元素的范围，最终找到目标元素。
+
+这样就可以写出解法代码：
+
+```
+int findKthLargest(int[] nums, int k) {
+    // 首先随机打乱数组
+    shuffle(nums);
+    int lo = 0, hi = nums.length - 1;
+    // 转化成「排名第 k 的元素」
+    k = nums.length - k;
+    while (lo <= hi) {
+        // 在 nums[lo..hi] 中选一个分界点
+        int p = partition(nums, lo, hi);
+        if (p < k) {
+            // 第 k 大的元素在 nums[p+1..hi] 中
+            lo = p + 1;
+        } else if (p > k) {
+            // 第 k 大的元素在 nums[lo..p-1] 中
+            hi = p - 1;
+        } else {
+            // 找到第 k 大元素
+            return nums[p];
+        }
+    }
+    return -1;
+}
+
+
+// 对 nums[lo..hi] 进行切分
+int partition(int[] nums, int lo, int hi) {
+    // 见前文
+}
+
+// 洗牌算法，将输入的数组随机打乱
+void shuffle(int[] nums) {
+    // 见前文
+}
+
+// 原地交换数组中的两个元素
+void swap(int[] nums, int i, int j) {
+    // 见前文
+}
+```
+
+这个代码框架其实非常像我们前文 [二分搜索框架](https://mp.weixin.qq.com/s?__biz=MzAxODQxMDM0Mw==&mid=2247485044&idx=1&sn=e6b95782141c17abe206bfe2323a4226&scene=21#wechat_redirect) 的代码，这也是这个算法高效的原因，但是时间复杂度为什么是 `O(N)` 呢？
+
+显然，这个算法的时间复杂度也主要集中在 `partition` 函数上，我们需要估算 `partition` 函数执行了多少次，每次执行的时间复杂度是多少。
+
+最好情况下，每次 `partition` 函数切分出的 `p` 都恰好是正中间索引 `(lo + hi) / 2`（二分），且每次切分之后会到左边或者右边的子数组继续进行切分，那么 `partition` 函数执行的次数是 logN，每次输入的数组大小缩短一半。
+
+所以总的时间复杂度为：
+
+```
+# 等差数列
+N + N/2 + N/4 + N/8 + ... + 1 = 2N = O(N)
+```
+
+当然，类似快速排序，快速选择算法中的 `partition` 函数也可能出现极端情况，最坏情况下 `p` 一直都是 `lo + 1` 或者一直都是 `hi - 1`，这样的话时间复杂度就退化为 `O(N^2)` 了：
+
+```
+N + (N - 1) + (N - 2) + ... + 1 = O(N^2)
+```
+
+这也是我们在代码中使用 `shuffle` 函数的原因，通过引入随机性来避免极端情况的出现，让算法的效率保持在比较高的水平。随机化之后的快速选择算法的复杂度可以认为是 O(N)。
+
+到这里，快速排序算法和快速选择算法就讲完了，从二叉树的视角来理解思路应该是不难的，但 `partition` 函数对细节的把控需要你多花心思去理解和记忆。
+
+最后留一个问题吧，比较一下快速排序和前文讲的 [归并排序](https://mp.weixin.qq.com/s?__biz=MzAxODQxMDM0Mw==&mid=2247495989&idx=1&sn=30e34ac75dd1c724205e9c8b0f488e35&scene=21#wechat_redirect) 并且可以说说你的理解：为什么快速排序是不稳定排序，而归并排序是稳定排序呢？
+
+
+
+### labuladong-归并
+
+**912. 排序数组（****Medium****）**
+
+- https://mp.weixin.qq.com/s/7_jsikVCARPFrJ6Hj1EYsg
+
+一直都有很多读者说，想让我用 [框架思维](https://mp.weixin.qq.com/s?__biz=MzAxODQxMDM0Mw==&mid=2247484852&idx=1&sn=85b50b8b0470bb4897e517955f4e5002&scene=21#wechat_redirect) 讲一讲基本的排序算法，我觉得确实得讲讲，毕竟学习任何东西都讲求一个融会贯通，只有对其本质进行比较深刻的理解，才能运用自如。
+
+本文就先讲归并排序，给一套代码模板，然后讲讲它在算法问题中的应用。阅读本文前我希望你读过前文 [手把手刷二叉树（纲领篇）](https://mp.weixin.qq.com/s?__biz=MzAxODQxMDM0Mw==&mid=2247494655&idx=1&sn=f3445112d7322ea8491073fd2d19f25c&scene=21#wechat_redirect)。
+
+我在 [手把手刷二叉树（第一期）](https://mp.weixin.qq.com/s?__biz=MzAxODQxMDM0Mw==&mid=2247487126&idx=1&sn=4de13e66397bc35970963c5a1330ce18&scene=21#wechat_redirect) 讲二叉树的时候，提了一嘴归并排序，说归并排序就是二叉树的后序遍历，当时就有很多读者留言说醍醐灌顶。
+
+知道为什么很多读者遇到递归相关的算法就觉得烧脑吗？因为还处在「看山是山，看水是水」的阶段。
+
+就说归并排序吧，如果给你看代码，让你脑补一下归并排序的过程，你脑子里会出现什么场景？
+
+这是一个数组排序算法，所以你脑补一个数组的 GIF，在那一个个交换元素？如果是这样的话，那格局就低了。
+
+但如果你脑海中浮现出的是一棵二叉树，甚至浮现出二叉树后序遍历的场景，那格局就高了，大概率掌握了 [框架思维](https://mp.weixin.qq.com/s?__biz=MzAxODQxMDM0Mw==&mid=2247484852&idx=1&sn=85b50b8b0470bb4897e517955f4e5002&scene=21#wechat_redirect)，用这种抽象能力学习算法就省劲多了。
+
+那么，归并排序明明就是一个数组算法，和二叉树有什么关系？接下来我就具体讲讲。
+
+### 算法思路
+
+**就这么说吧，所有递归的算法，你甭管它是干什么的，本质上都是在遍历一棵（递归）树，然后在节点（前中后序位置）上执行代码，你要写递归算法，本质上就是要告诉每个节点需要做什么**。
+
+你看归并排序的代码框架：
+
+```
+// 定义：排序 nums[lo..hi]
+void sort(int[] nums, int lo, int hi) {
+    if (lo == hi) {
+        return;
+    }
+    int mid = (lo + hi) / 2;
+    // 利用定义，排序 nums[lo..mid]
+    sort(nums, lo, mid);
+    // 利用定义，排序 nums[mid+1..hi]
+    sort(nums, mid + 1, hi);
+
+    /****** 后序位置 ******/
+    // 此时两部分子数组已经被排好序
+    // 合并两个有序数组，使 nums[lo..hi] 有序
+    merge(nums, lo, mid, hi);
+    /*********************/
+}
+
+// 将有序数组 nums[lo..mid] 和有序数组 nums[mid+1..hi]
+// 合并为有序数组 nums[lo..hi]
+void merge(int[] nums, int lo, int mid, int hi);
+```
+
+看这个框架，也就明白那句经典的总结：归并排序就是先把左半边数组排好序，再把右半边数组排好序，然后把两半数组合并。
+
+上述代码和二叉树的后序遍历很像：
+
+```
+/* 二叉树遍历框架 */
+void traverse(TreeNode root) {
+    if (root == null) {
+        return;
+    }
+    traverse(root.left);
+    traverse(root.right);
+    /****** 后序位置 ******/
+    print(root.val);
+    /*********************/
+}
+```
+
+再进一步，你联想一下求二叉树的最大深度的算法代码：
+
+```
+// 定义：输入根节点，返回这棵二叉树的最大深度
+int maxDepth(TreeNode root) {
+    if (root == null) {
+        return 0;
+    }
+    // 利用定义，计算左右子树的最大深度
+    int leftMax = maxDepth(root.left);
+    int rightMax = maxDepth(root.right);
+    // 整棵树的最大深度等于左右子树的最大深度取最大值，
+    // 然后再加上根节点自己
+    int res = Math.max(leftMax, rightMax) + 1;
+
+    return res;
+}
+```
+
+是不是更像了？
+
+前文 [手把手刷二叉树（纲领篇）](https://mp.weixin.qq.com/s?__biz=MzAxODQxMDM0Mw==&mid=2247494655&idx=1&sn=f3445112d7322ea8491073fd2d19f25c&scene=21#wechat_redirect) 说二叉树问题可以分为两类思路，一类是遍历一遍二叉树的思路，另一类是分解问题的思路，根据上述类比，显然归并排序利用的是分解问题的思路（分治算法）。
+
+**归并排序的过程可以在逻辑上抽象成一棵二叉树，树上的每个节点的值可以认为是`nums[lo..hi]`，叶子节点的值就是数组中的单个元素**：
+
+![Image](https://tva1.sinaimg.cn/large/e6c9d24egy1h68q8pl10bj20u00gwjs6.jpg)
+
+然后，在每个节点的后序位置（左右子节点已经被排好序）的时候执行`merge`函数，合并两个子节点上的子数组：
+
+![Image](https://tva1.sinaimg.cn/large/e6c9d24egy1h68q8mkrvbj20u00gwgm8.jpg)
+
+这个`merge`操作会在二叉树的每个节点上都执行一遍，执行顺序是二叉树后序遍历的顺序。
+
+后序遍历二叉树大家应该已经烂熟于心了，就是下图这个遍历顺序：
+
+![Image](https://tva1.sinaimg.cn/large/e6c9d24egy1h68q8p3qroj20u00gwt9e.jpg)
+
+结合上述基本分析，我们把`nums[lo..hi]`理解成二叉树的节点，`srot`函数理解成二叉树的遍历函数，整个归并排序的执行过程就是以下 GIF 描述的这样：
+
+![Image](https://tva1.sinaimg.cn/large/e6c9d24egy1h68q8o1xe9g20tz0gvak8.gif)
+
+这样，归并排序的核心思路就分析完了，接下来只要把思路翻译成代码就行。
+
+### 代码实现及分析
+
+**只要拥有了正确的思维方式，理解算法思路是不困难的，但把思路实现成代码，也很考验一个人的编程能力**。
+
+毕竟算法的时间复杂度只是一个理论上的衡量标准，而算法的实际运行效率要考虑的因素更多，比如应该避免内存的频繁分配释放，代码逻辑应尽可能简洁等等。
+
+经过对比，《算法 4》中给出的归并排序代码兼具了简洁和高效的特点，所以我们可以参考书中给出的代码作为归并算法模板：
+
+```
+class Merge {
+
+    // 用于辅助合并有序数组
+    private static int[] temp;
+
+    public static void sort(int[] nums) {
+        // 先给辅助数组开辟内存空间
+        temp = new int[nums.length];
+        // 排序整个数组（原地修改）
+        sort(nums, 0, nums.length - 1);
+    }
+
+    // 定义：将子数组 nums[lo..hi] 进行排序
+    private static void sort(int[] nums, int lo, int hi) {
+        if (lo == hi) {
+            // 单个元素不用排序
+            return;
+        }
+        // 这样写是为了防止溢出，效果等同于 (hi + lo) / 2
+        int mid = lo + (hi - lo) / 2;
+        // 先对左半部分数组 nums[lo..mid] 排序
+        sort(nums, lo, mid);
+        // 再对右半部分数组 nums[mid+1..hi] 排序
+        sort(nums, mid + 1, hi);
+        // 将两部分有序数组合并成一个有序数组
+        merge(nums, lo, mid, hi);
+    }
+
+    // 将 nums[lo..mid] 和 nums[mid+1..hi] 这两个有序数组合并成一个有序数组
+    private static void merge(int[] nums, int lo, int mid, int hi) {
+        // 先把 nums[lo..hi] 复制到辅助数组中
+        // 以便合并后的结果能够直接存入 nums
+        for (int i = lo; i <= hi; i++) {
+            temp[i] = nums[i];
+        }
+
+        // 数组双指针技巧，合并两个有序数组
+        int i = lo, j = mid + 1;
+        for (int p = lo; p <= hi; p++) {
+            if (i == mid + 1) {
+                // 左半边数组已全部被合并
+                nums[p] = temp[j++];
+            } else if (j == hi + 1) {
+                // 右半边数组已全部被合并
+                nums[p] = temp[i++];
+            } else if (temp[i] > temp[j]) {
+                nums[p] = temp[j++];
+            } else {
+                nums[p] = temp[i++];
+            }
+        }
+    }
+}
+```
+
+有了之前的铺垫，这里只需要着重讲一下这个`merge`函数。
+
+`sort`函数对`nums[lo..mid]`和`nums[mid+1..hi]`递归排序完成之后，我们没有办法原地把它俩合并，所以需要 copy 到`temp`数组里面，然后通过类似于前文 [单链表的六大技巧](https://mp.weixin.qq.com/s?__biz=MzAxODQxMDM0Mw==&mid=2247492022&idx=1&sn=35f6cb8ab60794f8f52338fab3e5cda5&scene=21#wechat_redirect) 中合并有序链表的双指针技巧将`nums[lo..hi]`合并成一个有序数组：
+
+![Image](https://tva1.sinaimg.cn/large/e6c9d24egy1h68q8mu3w0j20u00gwgmh.jpg)
+
+注意我们不是在`merge`函数执行的时候 new 辅助数组，而是提前把`temp`辅助数组 new 出来了，这样就避免了在递归中频繁分配和释放内存可能产生的性能问题。
+
+再说一下归并排序的时间复杂度，虽然大伙儿应该都知道是`O(NlogN)`，但不见得所有人都知道这个复杂度怎么算出来的。
+
+前文 [动态规划详解](https://mp.weixin.qq.com/s?__biz=MzAxODQxMDM0Mw==&mid=2247484731&idx=1&sn=f1db6dee2c8e70c42240aead9fd224e6&scene=21#wechat_redirect) 说过递归算法的复杂度计算，就是子问题个数 x 解决一个子问题的复杂度。
+
+对于归并排序来说，时间复杂度显然集中在`merge`函数遍历`nums[lo..hi]`的过程，但每次`merge`输入的`lo`和`hi`都不同，所以不容易直观地看出时间复杂度。
+
+`merge`函数到底执行了多少次？每次执行的时间复杂度是多少？总的时间复杂度是多少？这就要结合之前画的这幅图来看：
+
+![Image](https://tva1.sinaimg.cn/large/e6c9d24egy1h68q8pl10bj20u00gwjs6.jpg)
+
+**执行的次数是二叉树节点的个数，每次执行的复杂度就是每个节点代表的子数组的长度，所以总的时间复杂度就是整棵树中「数组元素」的个数**。
+
+所以从整体上看，这个二叉树的高度是`logN`，其中每一层的元素个数就是原数组的长度`N`，所以总的时间复杂度就是`O(NlogN)`。
+
+力扣第 912 题「排序数组」就是让你对数组进行排序，我们可以直接套用归并排序代码模板：
+
+```
+class Solution {
+    public int[] sortArray(int[] nums) {
+        // 归并排序对数组进行原地排序
+        Merge.sort(nums);
+        return nums;
+    }
+}
+
+class Merge {
+    // 见上文
+}
+```
+
+### 其他应用
+
+除了最基本的排序问题，归并排序还可以用来解决力扣第 315 题「计算右侧小于当前元素的个数」：
+
+![Image](https://tva1.sinaimg.cn/large/e6c9d24egy1h68q8nbj0gj20s80j4ac2.jpg)
+
+拍脑袋的暴力解法就不说了，嵌套 for 循环，平方级别的复杂度。
+
+这题和归并排序什么关系呢，主要在`merge`函数，我们在合并两个有序数组的时候，其实是可以知道一个数字`x`后边有多少个数字比`x`小的。
+
+具体来说，比如这个场景：
+
+![Image](https://tva1.sinaimg.cn/large/e6c9d24egy1h68q8ormqfj20u00gwmy0.jpg)
+
+这时候我们应该把`temp[i]`放到`nums[p]`上，因为`temp[i] < temp[j]`。
+
+但就在这个场景下，我们还可以知道一个信息：5 后面比 5 小的元素个数就是`j`和`mid + 1`之间的元素个数，即 2 个。
+
+![Image](https://tva1.sinaimg.cn/large/e6c9d24egy1h68q8q4qboj20u00gwt9k.jpg)
+
+**换句话说，在对`nuns[lo..hi]`合并的过程中，每当执行`nums[p] = temp[i]`时，就可以确定`temp[i]`这个元素后面比它小的元素个数为`j - mid - 1`**。
+
+当然，`nums[lo..hi]`本身也只是一个子数组，这个子数组之后还会被执行`merge`，其中元素的位置还是会改变。但这是其他递归节点需要考虑的问题，我们只要在`merge`函数中做一些手脚，就可以让每个递归节点叠加每次`merge`时记录的结果。
+
+发现了这个规律后，我们只要在`merge`中添加两行代码即可解决这个问题，看解法代码：
+
+```
+class Solution {
+    private class Pair {
+        int val, id;
+        Pair(int val, int id) {
+            // 记录数组的元素值
+            this.val = val;
+            // 记录元素在数组中的原始索引
+            this.id = id;
+        }
+    }
+
+    // 归并排序所用的辅助数组
+    private Pair[] temp;
+    // 记录每个元素后面比自己小的元素个数
+    private int[] count;
+
+    // 主函数
+    public List<Integer> countSmaller(int[] nums) {
+        int n = nums.length;
+        count = new int[n];
+        temp = new Pair[n];
+        Pair[] arr = new Pair[n];
+        // 记录元素原始的索引位置，以便在 count 数组中更新结果
+        for (int i = 0; i < n; i++)
+            arr[i] = new Pair(nums[i], i);
+
+        // 执行归并排序，本题结果被记录在 count 数组中
+        sort(arr, 0, n - 1);
+
+        List<Integer> res = new LinkedList<>();
+        for (int c : count) res.add(c);
+        return res;
+    }
+
+    // 归并排序
+    private void sort(Pair[] arr, int lo, int hi) {
+        if (lo == hi) return;
+        int mid = lo + (hi - lo) / 2;
+        sort(arr, lo, mid);
+        sort(arr, mid + 1, hi);
+        merge(arr, lo, mid, hi);
+    }
+
+    // 合并两个有序数组
+    private void merge(Pair[] arr, int lo, int mid, int hi) {
+        for (int i = lo; i <= hi; i++) {
+            temp[i] = arr[i];
+        }
+
+        int i = lo, j = mid + 1;
+        for (int p = lo; p <= hi; p++) {
+            if (i == mid + 1) {
+                arr[p] = temp[j++];
+            } else if (j == hi + 1) {
+                arr[p] = temp[i++];
+                // 更新 count 数组
+                count[arr[p].id] += j - mid - 1;
+            } else if (temp[i].val > temp[j].val) {
+                arr[p] = temp[j++];
+            } else {
+                arr[p] = temp[i++];
+                // 更新 count 数组
+                count[arr[p].id] += j - mid - 1;
+            }
+        }
+    }
+}
+```
+
+因为在排序过程中，每个元素的索引位置会不断改变，所以我们用一个`Pair`类封装每个元素及其在原始数组`nums`中的索引，以便`count`数组记录每个元素之后小于它的元素个数。
+
+你现在回头体会下我在本文开头说那句话：
+
+**所有递归的算法，本质上都是在遍历一棵（递归）树，然后在节点（前中后序位置）上执行代码。你要写递归算法，本质上就是要告诉每个节点需要做什么**。
+
+有没有品出点味道？
+
+最后总结一下吧，本文从二叉树的角度讲了归并排序的核心思路和代码实现，同时讲了一道归并排序相关的算法题。这道算法题其实就是归并排序算法逻辑中夹杂一点私货，但仍然属于比较难的，你可能需要亲自做一遍才能理解。
+
+那我最后留一个思考题吧，下一篇文章我会讲快速排序，你是否能够尝试着从二叉树的角度去理解快速排序？如果让你用一句话总结快速排序的逻辑，你怎么描述？
+
+好了，答案下篇文章揭晓。
