--- a/语言学/🥑N5-N4口语.md
+++ b/语言学/🥑N5-N4口语.md
@@ -36,7 +36,7 @@ https://www.youtube.com/watch?v=w7QzsUVVtHM
 28. リュウくんの　おくさんは　きれいですね。（ryu的老婆好美呀）
 29. ごじゅじんは　おいくつですか。（您的丈夫多少歲數？）
 30. むすめや　むすこの　子どもは　まごです。（女兒和兒子的孩子叫孫子）
-31. リュウさんは　かっこいいですか、かっこよくないですか。（ryu是帥還是不帥啊）
+//31. リュウさんは　かっこいいですか、かっこよくないですか。（ryu是帥還是不帥啊）
 32. わたしは　英語が　あまり　じょうずじゃありません。（我的英文不太好）
 33. ゆまさんは　きのう　パーティーに　来(こ)なかったです。（yuma昨天沒來派對）
 34. これは　日本語の教科書です。（這是日文的教科書）
@@ -47,65 +47,66 @@ https://www.youtube.com/watch?v=w7QzsUVVtHM
 39. いすの上に　うさぎのにんぎょうが　あります。（在椅子上面有兔子娃娃）
 40. わたしは　マレーシアから　来ました。（我從馬來西亞來的）
 41. 日本は　すずしいですが、マレーシアは　あついです。（日本很涼快，馬來西亞很熱的）
-42. 東京は　おしゃれな店が　たくさんありますね。（東京有很多時尚的店）
+// 42. 東京は　おしゃれな店が　たくさんありますね。（東京有很多時尚的店）
 43. 「クリスマスプレゼント、なにが　いいですか。」「そうですね〜、高級マンションがいいです♡」（聖誕節禮物 送什麼好呢？ 嗯.. 我要高級公寓）
 44. まいあさ  ７(しち)時に　いえを　出ます。（我每天早上7點出門）
 45. 「クリスマスは　誰と　すごしますか。」「ひとりで　すごします。。」（聖誕節和誰過呀 一個人過）
 46. 今から　学校に　行きます。（我現在要去學校）
 47. 月よう日に　また会いましょう。（我們星期日再見）
-48. わからないことは　わたしに　聞いてください。（有什麼不懂的請問我）
+// 48. わからないことは　わたしに　聞いてください。（有什麼不懂的請問我）
 49. 子どもたちが　にわで　遊んでいます。（小朋友們在庭園玩耍）
-50. 日本語で　話してください。（請用日文說）
+// 50. 日本語で　話してください。（請用日文說）
 51. せかいで　いちばん　きみが　きれいだ。（這世上你是最美的）
 52. わたしも　パクチーが　苦手です。（我也不喜歡吃香菜）
 53. コーヒーかこうちゃ、どちらがいいですか。（咖啡和紅茶你要喝哪個？）
 54. 駅前には、コンビニやいざかやなどが　あります。（在車站前有超商和居酒屋）
 55. 試験は　午前９時から　午後４時までです。（考試是從早上9點到下午4點）
-56. あしたの　ひるごろ　もう一度　来てください。（請你明天的中午左右 再過來）
+//56. あしたの　ひるごろ　もう一度　来てください。（請你明天的中午左右 再過來）
 57. 駅まで　タクシーで　だいたい　1,000円ぐらい　かかります。（坐計程車到車站大概花費1000日幣）
 58. ぼくと、一日だけ　デートしてください！（拜託和我約會一天吧！）
-59. 東京駅へは、なにで　行きますか？（請問要搭什麼去東京車站？）
-60. 今週は　どのくらい　本を　読みましたか。（ 這一週你看了幾本書）
+//59. 東京駅へは、なにで　行きますか？（請問要搭什麼去東京車站？）
+//60. 今週は　どのくらい　本を　読みましたか。（ 這一週你看了幾本書）
 61. 「ゆまさんは　いま　おいくつですか。」「１８さいです。」「嘘つけー！」（yuma現在幾歲啊18歲 騙人！）
-62. すみません、だれかいますか？　…だれも　いませんね。（不好意思有人在嗎？）
-63. いつか　ヨーロッパに　行きたいです。（哪天真想去一趟歐洲呢）
-64. このバックは　大きいので、　なんでも　入ります。（ 這個包包很大 什麼都能裝進去）
+//62. すみません、だれかいますか？　…だれも　いませんね。（不好意思有人在嗎？）
+//63. いつか　ヨーロッパに　行きたいです。（哪天真想去一趟歐洲呢）
+//64. このバックは　大きいので、　なんでも　入ります。（ 這個包包很大 什麼都能裝進去）
 65. 「今日のおひるは　なにが　食べたいですか。」「うーん、わたしは　なんでも　いいですよ。」（今天午餐你想吃什麼）
-66. 「さいきん　どうですか。」「彼女が　できたので　まいにち　幸せです。」（最近怎樣？ 我叫了一位女朋友每天都很幸福）
+//66. 「さいきん　どうですか。」「彼女が　できたので　まいにち　幸せです。」（最近怎樣？ 我叫了一位女朋友每天都很幸福）
 67. マクドナルドは、やすくて　はやくて　おいしい。（麥當勞便宜 快 又好吃）
-68. あさ　おきて、あさごはんを　食べて、それから　うんどうをします。（それから… 我早上起床 先吃早餐後會運動）
+//68. あさ　おきて、あさごはんを　食べて、それから　うんどうをします。（それから… 我早上起床 先吃早餐後會運動）
 69. はを　みがいてから　ねましょう。（先刷了牙 在睡覺吧）
 70. かわいい　彼女が　ほしいです。（我想要可愛的女朋友）
-71. 鬼滅の刃のえいがを　見たいですが、ひとりでは　見たくないです。（我想看鬼滅之刃的電影 但是不想一個人看）
+//71. 鬼滅の刃のえいがを　見たいですが、ひとりでは　見たくないです。（我想看鬼滅之刃的電影 但是不想一個人看）
 72. 兄は　東京の小学校で　英語を　おしえています。（我哥在東京的國小教英文）
 73. ここで　タバコを　すわないでください。（請不要在這裡抽煙）
 74. このコップは　たんじょうびに　友だちから　もらいました。（這個杯子是我生日的時候朋友給我的）
 75. 姉が　ふくを　たくさん　くれました。（我姐姐給了我很多衣服）
 76. 今年のバレンタインデーは、リュウくんに　クッキーを　あげました。（今天的情人節我給了ryu很多餅乾）
 77. 時間が　ないので、タクシーで　行きましょう。（因為沒時間 我們坐計程車去吧）
-78. にもつが　多いですね、てつだいましょうか。（你好多包包呀 我來幫你吧）
+//78. にもつが　多いですね、てつだいましょうか。（你好多包包呀 我來幫你吧）
 79. ゆまちゃん、今度の日よう日　ぼくと　デートしませんか。（yuma 這個星期日 可以和我約會嗎）
-80. あしたは　テストが　あるから、家に　かえって　べんきょうします。（明天有考試我要回家學習）
-81. 「今日の　テスト、どうでしたか。」「べんきょうしたけど、あまり　できませんでした。」（今天的考得怎麼樣 我有學習但還是不太會）
+//80. あしたは　テストが　あるから、家に　かえって　べんきょうします。（明天有考試我要回家學習）
+81. 「今日の　テスト、どうでしたか。」
+  //「べんきょうしたけど、あまり　できませんでした。」（今天的考得怎麼樣 我有學習但還是不太會）
 82. 日本語は　むずかしいです。でも、おもしろいです。（日文很難 但是很有趣）
 83. それじゃ、またね！（那 我們再見）
-84. 日本語で　自分の意見を　言うのは　たいへんです。（要用日文說自己的意見好幸苦）
-85. まだ　よるごはんを　食べていません。（我還沒吃晚餐）
-86. 先生のむすめさん、大きくなりましたね。（老師的女兒這麼大了呀）
-87. テレビのおとを　小さくしてください。（請把電視的聲音調小）
+//84. 日本語で　自分の意見を　言うのは　たいへんです。（要用日文說自己的意見好幸苦）
+//85. まだ　よるごはんを　食べていません。（我還沒吃晚餐）
+//86. 先生のむすめさん、大きくなりましたね。（老師的女兒這麼大了呀）
+//87. テレビのおとを　小さくしてください。（請把電視的聲音調小）
 88. わたしは　ひまなとき、ユーチューブを　見ます。（我有空的時候 會看youtube）
 89. 日本に　来る　前に、　少し　日本語を　べんきょうしました。（我來日本之前 學了一點日文）
 90. えいがを　見た　あと(で) カラオケに　行きました。（我看了電影之後去了卡拉ok）
 91. また　あそびに　来て　くださいね。（下次請一定要再來玩喔）
 92. わたしの姉は　わたしより　せが　低いです。（我的姊姊比我還矮小）
-93. リュウくんと　ゆまちゃん(と)、どちらのほうが　お酒が　すきですか。（ryu 和 yuma 你們誰比較喜歡喝酒）
+//93. リュウくんと　ゆまちゃん(と)、どちらのほうが　お酒が　すきですか。（ryu 和 yuma 你們誰比較喜歡喝酒）
 94. 「日本料理の中で、なにが　いちばん　すきですか。」「大阪のたこやきが　いちばん　すきです。」（在日本料理當中最喜歡什麼 我最喜歡大阪的章魚燒）
-95. 休みの日は、　うちで　アニメを見たり　ゲームをしたり　します。（假日我都在家裡看看動漫 打打遊戲）
-96. 日本語を　聞くことは　できますが、　話すことは　できません。（日文我會聽 但不會說）
-97. 日本人の　名前を　おぼえるのは　むずかしくないです。（日本人的名字不會難記）
+//95. 休みの日は、　うちで　アニメを見たり　ゲームをしたり　します。（假日我都在家裡看看動漫 打打遊戲）
+//96. 日本語を　聞くことは　できますが、　話すことは　できません。（日文我會聽 但不會說）
+//97. 日本人の　名前を　おぼえる のは　むずかしくないです。（日本人的名字不會難記）
 98. リュウくんは　変顔が　できます。（ ryu會做怪臉）
-99. わたしは　あまり　英語が　話せません。＝話す ことが できません（我不會太說英文）
-100. みなさん、あした　朝７時に　来(こ)られますか。＝来る ことが できますか（大家 明天的早上7點能來嗎）
+//99. わたしは　あまり　英語が　話せません。＝話す ことが できません（我不會太說英文）
+//100. みなさん、あした　朝７時に　来(こ)られますか。＝来る ことが できますか（大家 明天的早上7點能來嗎）
 ```
 
 
@@ -627,102 +628,102 @@ https://www.youtube.com/watch?v=w7QzsUVVtHM
 ```java
 1. わたしは一週間に３回、日本語の授業を受けます。（我一週有三堂日文課程）
 2. 姉は　日本のGoogleにつとめています。（我的姊姊在日本的谷歌上班）
-3. 私は　日本に　１０回も　行ったことがあります。（我去過日本10次了）
-4. コンビニで、ビールと梅酒を　２本ずつ買いました。（在便利商店 各買了兩瓶啤酒和梅酒）
+//3. 私は　日本に　１０回も　行ったことがあります。（我去過日本10次了）
+//4. コンビニで、ビールと梅酒を　２本ずつ買いました。（在便利商店 各買了兩瓶啤酒和梅酒）
 5. あの方もきれいですが、あなたほどではありません。（那位小姐也是很美啦 但是比不過你）
 6. これは、こどもでもできる問題ですよ。（這是連小朋友都能答的問題）
 7. 今回は　仕事で　日本に来ました。（這次是因為工作來了日本）
 8. 僕は　かわいい彼女が　10人も　います。（我有10個很可愛的女朋友）
 9. リュウさんは　下ネタしか　話せません。（ryu只懂得開黃腔）
-10. 先生が　戻ってくるまで　教室にいなければいけません。(必須待在教室直到老師回來)
+//10. 先生が　戻ってくるまで　教室にいなければいけません。(必須待在教室直到老師回來)
 11. クリスマスまでに　彼女が欲しいです。(我在聖誕節前想交到女朋友)
 12.  休みの日は　漫画を読んだり　ゲームをしたり　しています。(假日我都看看漫畫 打打遊戲)
-13. 妻は　このごろ　ビールばかり　飲んでいます。(我老婆最近光喝酒)
-14. 今、筋トレをしているところです。(現在剛好正在健身)
+//13. 妻は　このごろ　ビールばかり　飲んでいます。(我老婆最近光喝酒)
+//14. 今、筋トレをしているところです。(現在剛好正在健身)
 15. 彼が寝ている間に、浮気をしました。(我曾男友在睡覺時 搞外遇了)
 16. これは、去年　日本に行ったときに　買ったものです。(這是去年去日本時買的)
 17. 「すみません、今会議中なので　あとでこちらから電話します。」(不好意思 我正在開會 等下由我再給您回電)
 18. お金がなくて、買えません。(沒錢我買不了)
-19. マスクをしたまま、コーヒーを飲んで　しまいました。(我不小心帶著口罩喝了咖啡)
-20. まあまあ、お酒でも　飲みながら　話しましょう。(好啦好啦 我們點杯酒 邊喝邊聊吧)
+//19. マスクをしたまま、コーヒーを飲んで　しまいました。(我不小心帶著口罩喝了咖啡)
+//20. まあまあ、お酒でも　飲みながら　話しましょう。(好啦好啦 我們點杯酒 邊喝邊聊吧)
 21. 私は　まだ一度も　日本に　行ったことがありません。(我一次也還沒去過日本)
-22. この辺りは　いのししがでることがあるので　気をつけてください。（這附近偶爾會出現山豬 請小心)
-23. 私は　毎日　ヤクルトを飲むことにしています。（我每天都要喝養樂多)
-24. 今年の日本語能力試験は　中止になりました。(今年的日文考試 中止了)
-25. 先輩たちが　卒業して　さびしくなりました。(前輩們都畢業了我變得好寂寞)
+//22. この辺りは　いのししがでることがあるので　気をつけてください。（這附近偶爾會出現山豬 請小心)
+//23. 私は　毎日　ヤクルトを飲むことにしています。（我每天都要喝養樂多)
+//24. 今年の日本語能力試験は　中止になりました。(今年的日文考試 中止了)
+//25. 先輩たちが　卒業して　さびしくなりました。(前輩們都畢業了我變得好寂寞)
 26. もう少し　音を　大きくしてください。（請把聲音調得再大一點)
-27. そろそろ　新しいパソコンを　買わないといけないなぁ。（是時候該買新電腦了)
+//27. そろそろ　新しいパソコンを　買わないといけないなぁ。（是時候該買新電腦了)
 28. これ、食べてもいいですか。（這我可以吃嗎)
-29. 明日は　特にやることがないので　来なくてもいいですよ。(明天也沒有特別的事幹 你可以不用來了)
+//29. 明日は　特にやることがないので　来なくてもいいですよ。(明天也沒有特別的事幹 你可以不用來了)
 30. テスト中は　喋ってはいけません。（ 考試期間不可以說話)
-31. N4の試験、受かるといいですね。（N4的考試 希望能合格)
+//31. N4の試験、受かるといいですね。（N4的考試 希望能合格)
 32. テストが始まる前に、筆記用具以外のものを　しまっておいてください。（在考試開始前 請把筆記用品以外的東西收起來)
-33. 「あれ？昨日買っておいたビールは？！」「あ、さっき飲んじゃった。。」（疑 我昨天買好的啤酒呢 啊 我不小心喝掉了)
-34. 「飲んでみる？」（要喝喝看嗎)
+//33. 「あれ？昨日買っておいたビールは？！」「あ、さっき飲んじゃった。。」（疑 我昨天買好的啤酒呢 啊 我不小心喝掉了)
+//34. 「飲んでみる？」（要喝喝看嗎)
 35. 「なるほど！教えてくれてありがとう！」（原來如此 謝謝你教我)
 36. 小さいころ、　よく　祖母に　遊んでもらいました。（小時候祖母很常跟我玩)
 37. これは、煉獄先生にいただいた本です。（這是從煉獄老師哪裏的到的書)
-38. 煉獄先生は　かっこいいし　熱心に　教えてくださるので、人気があります。（煉獄老師人又帥 教導也很熱心 所以有人氣)
-39. 日本をもっと知るために　日本に留学しました。（為了更了解日本我來留學了)
-40. みんなに聞こえるように、大きい声で話してください。（為了讓大家都能聽到 請大聲說)
-41. 日本語が話せるようになってから、学校が楽しくなりました。（自從我變得會說日文之後 學校生活變得快樂起來了)
-42. ダイエット中なので、甘いものを食べないようにしています。（我正在減肥 所以控制不吃甜食)
+//38. 煉獄先生は　かっこいいし　熱心に　教えてくださるので、人気があります。（煉獄老師人又帥 教導也很熱心 所以有人氣)
+//39. 日本をもっと知るために　日本に留学しました。（為了更了解日本我來留學了)
+//40. みんなに聞こえるように、大きい声で話してください。（為了讓大家都能聽到 請大聲說)
+//41. 日本語が話せるようになってから、学校が楽しくなりました。（自從我變得會說日文之後 學校生活變得快樂起來了)
+//42. ダイエット中なので、甘いものを食べないようにしています。（我正在減肥 所以控制不吃甜食)
 43. 医者に、この薬を　毎日　飲むように言われました。（醫生讓我每天都吃這個藥)
-44. 「くそ〜、、あんなにがんばったのに・・・」（可惡 我明明那麼努力了)
+//44. 「くそ〜、、あんなにがんばったのに・・・」（可惡 我明明那麼努力了)
 45. これは　どういう意味ですか。（這是什麼意思啊)
-46. 今日は　早く　寝たほうがいいですよ。（今天早點睡比較好)
-47. 上司に　このことは誰にも言うなって言われました。（我被上司說 這事不能對任何人說出去)
+//46. 今日は　早く　寝たほうがいいですよ。（今天早點睡比較好)
+//47. 上司に　このことは誰にも言うなって言われました。（我被上司說 這事不能對任何人說出去)
 48. 肉だけじゃなくて、野菜も食べなさい。（不要只吃肉 菜也要吃喔)
-49. 今日は祝日なので、その店が開いているかどうか　わかりません。（今天是公共假日 那家店有沒有開我也不知道)
-50. 昨日は飲み会のあと、どうやって帰ってきたか　覚えていません。（昨天聚會之後 我是怎麼回來的我沒記得。)
+//49. 今日は祝日なので、その店が開いている かどうか　わかりません。（今天是公共假日 那家店有沒有開我也不知道)
+//50. 昨日は飲み会のあと、どうやって帰ってきたか　覚えていません。（昨天聚會之後 我是怎麼回來的我沒記得。)
 51. あそこで　魚を売っているの（＝人）が　父です。（在那邊賣魚的人就是我父親)
 52. 授業が始まるのは、９時からです。（課是從9點開始)
-53. ひらがなを覚えるのに　３ヶ月もかかりました。（我花了3個月學會片假名))
+//53. ひらがなを覚える のに　３ヶ月もかかりました。（我花了3個月學會片假名)
 54. この店では　高級料理が食べられます。（這個店能吃到高級料理)
-55. 隣の部屋から　変な声が　聞こえます。（從隔壁的房間可以聽到奇怪的聲音)
+//55. 隣の部屋から　変な声が　聞こえます。（從隔壁的房間可以聽到奇怪的聲音)
 56. 携帯電話を買ってもらったので、毎日彼女の声が聞けます。（買給我手機之後 每天都能聽到女友的聲音)
-57. ここから　富士山が　よく　見えます。（從這裡能清楚看見富士山)
+//57. ここから　富士山が　よく　見えます。（從這裡能清楚看見富士山)
 58. うちに来れば、裸で寝ているリュウくんが見られますよ。（你來我家就可以看到裸睡的ryu喔)
-59. 昨日リュウさんが、きれいな女の人と歩いているのを見ました。（昨天我看到ryu和漂亮的女生一起走路)
-60. 私は歌が下手なので、カラオケにはあまり行きません。（我唱歌很爛 不太去卡拉ok)
-61. もう１２月なのに、全然寒くないですね。（已經12月了卻一點都沒感覺到冷)
+//59. 昨日リュウさんが、きれいな女の人と歩いているのを見ました。（昨天我看到ryu和漂亮的女生一起走路)
+//60. 私は歌が下手なので、カラオケには あまり 行きません。（我唱歌很爛 不太去卡拉ok)
+//61. もう１２月なのに、全然寒くないですね。（已經12月了卻一點都沒感覺到冷)
 62. 明日のイベントは　雨でも　やります。（明天的活動就算下雨也會辦)
-63. あの人は　いくらあやまっても　許してくれない。（那個人你道歉多少次他都不會原諒你的)
-64. あの人を　ゆるすつもりはありません。（我沒有要原諒那個人的意思)
+//63. あの人は　いくらあやまっても　許してくれない。（那個人你道歉多少次他都不會原諒你的)
+//64. あの人を　ゆるす つもり はありません。（我沒有要原諒那個人的意思)
 65. リュウさんは日本語がうまい。それに、かっこいい！（ ryu的日文很棒！而且還很帥！)
-66. 集合時間はもう過ぎている。ところが、彼はまだ来ていない。（集合的時間已經過了 他卻還沒來到)
-67. 頭のよさよりも、愛情の深さのほうが　大事です。（比起腦袋好不好，愛你多深才是最重要的)
+//66. 集合時間はもう 過ぎている 。ところが、彼はまだ来ていない。（集合的時間已經過了 他卻還沒來到)
+//67. 頭のよさよりも、愛情の深さのほうが　大事です。（比起腦袋好不好，愛你多深才是最重要的)
 68. 東京駅までの行き方を教えてください。（請告訴我到東京車站的方法)
 69. すみませんが、もう一度　言っていただけませんか。（不要意思可以麻煩你再說一次嗎)
-70. 早く　夏休みに　なってほしい。（希望快點進入暑假)
-71. 先生に　スピーチで話す内容を　チェックしていただきたいです。（拜託老師幫忙檢查我發表要說的內容)
-72. そんなに彼女が欲しいなら、合コンにでも　行ってみたらどうですか。（那麼想要女朋友的話聯誼會那些去參加看看啊)
-73. あの…ちょっと話したいことがあるんだけど…。（那個 我有話想跟你說)
+//70. 早く　夏休みに　なってほしい。（希望快點進入暑假)
+//71. 先生に　スピーチで話す内容を　チェックして【いただきたい】です。（拜託老師幫忙檢查我發表要說的內容)
+//72. そんなに彼女が欲しいなら、合コンにでも　行ってみたらどうですか。（那麼想要女朋友的話聯誼會那些去參加看看啊)
+//73. あの…ちょっと話したいことがあるんだけど…。（那個 我有話想跟你說)
 74. ゆまちゃんは、明日は用事があるから行けないと言っていましたよ。（yuma她說了明天有事不能去)
-75. 今度の金曜日、みんなで飲みに行こうよ！（這週五大家一去喝一杯吧！)
-76. 今日は休みなので、ゆっくりドラマでも見ようと思います。（今天是假日所以我想慢慢享受電視劇)
+//75. 今度の金曜日、みんなで飲みに行こうよ！（這週五大家一去喝一杯吧！)
+//76. 今日は休みなので、ゆっくりドラマでも見ようと思います。（今天是假日所以我想慢慢享受電視劇)
 77. もし暑かったら、エアコンをつけてくださいね。（如果覺得熱的話請打開空調)
-78. 「時間やばいな...」「タクシーで行けば、間に合うと思う！」（ 時間有點糟糕 坐計程車去的話我覺得來得及！)
+//78. 「時間やばいな...」「タクシーで行けば、間に合うと思う！」（ 時間有點糟糕 坐計程車去的話我覺得來得及！)
 79. 渋谷から原宿に行くなら、山手線が便利です。（從涉谷去原宿的話山手線很方便)
-80. あそこを右に曲がって　少し行くと、コンビニがあります。（那邊往右拐 在走一下就有便利商店)
+//80. あそこを右に曲がって　少し行くと、コンビニがあります。（那邊往右拐 在走一下就有便利商店)
 81. このアニメを見たら、もう寝よう。　（看完這部動漫就睡覺吧)
-82. 明日は天気が悪いみたいだから　今日洗濯しておいたほうがいいね。（聽說明天天氣不好喔，今天把衣服先洗掉比較好)
+//82. 明日は天気が悪いみたいだから　今日洗濯 しておいた ほうがいいね。（聽說明天天氣不好喔，今天把衣服先洗掉比較好)
 83. わ〜！おいしそう！！（哇好好吃的樣子)
 84. 今晩、東北地方では雪が降るでしょう。（今晚估計東北地區會下雪)
-85. 今行かなかったら、もう一生会えないかもしれない。（現在不去的話 恐怕一輩子也見不到了喔)
+85. //今行かなかったら、もう一生会えないかもしれない。（現在不去的話 恐怕一輩子也見不到了喔)
 86. リュウさんは、かっこよすぎます！（ryu桑也太帥了吧！)
 87. 私はとても傷つきやすい性格です。（我是很容易受傷的性格)
-88. 僕はストレスがたまりにくい性格です。（我是不容易感覺到壓力的性格)
+//88. 僕はストレスがたまりにくい性格です。（我是不容易感覺到壓力的性格)
 89. 胃の痛みがおさまるまで、この薬を飲み続けてください。（請持續吃這個藥直到胃痛好下來)
 90. 先生に　ほめられました。（我被老師稱讚了)
-91. うさぎに薬を飲ませるのは　大変です。（要讓兔子吃藥好辛苦)
+//91. うさぎに薬を飲ませるのは　大変です。（要讓兔子吃藥好辛苦)
 92. 入社して一か月で、会社をやめさせられました。（我入社一個月就被炒掉了)
-93. そのゲームおもしろそう、私にもやらせて！（這個遊戲看起來好有趣 也讓我玩一下！)
-94. ここに車をとめておいても大丈夫ですか。（我把車子停在這裡沒問題吧)
+//93. そのゲームおもしろそう、私にもやらせて！（這個遊戲看起來好有趣 也讓我玩一下！)
+//94. ここに車をとめておいても大丈夫ですか。（我把車子停在這裡沒問題吧)
 95. 今日は車がたくさんとまっていますね。（今天停了好多車在這)
-96. この間の地震で　冷蔵庫がこわれてしまいました。（上一次的地震把我的冰箱弄壞了)
-97. 友達のパソコンを　こわしてしまいました。　（我把朋友的電腦搞壞了)
-98. ちょっとコンビニ行ってくるけど、なにか買ってきてほしいものある？（有什麼要我買的嗎)
+//96. この間の地震で　冷蔵庫がこわれ てしまいました。（上一次的地震把我的冰箱弄壞了)
+//97. 友達のパソコンを　こわしてしまいました。　（我把朋友的電腦搞壞了)
+//98. ちょっとコンビニ行ってくるけど、なにか買ってきてほしいものある？（有什麼要我買的嗎)
 99. 「今日元気ないね、どうしたの？」「昨日、彼女にふられたんだ…」（今天看起來沒精神耶 怎麼了嗎 昨天我被女朋友甩了)
 100. 今日のパーティー、ゆまちゃん来るかなあ。（今天的派對 不曉得yuma會來嗎)
 
